--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-quilljs": "^1.2.14",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
