--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.26.3",
     "bootstrap": "^4.6.0",
+    "otp-input-react": "^0.3.0",
     "raphael": "^2.3.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
