--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.23.6",
+    "antd-modal": "^0.1.1",
     "apexcharts": "^3.26.3",
     "bootstrap": "^4.6.0",
     "otp-input-react": "^0.3.0",
