--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -10,6 +12,7 @@
     "antd-modal": "^0.1.1",
     "apexcharts": "^3.26.3",
     "bootstrap": "^4.6.0",
+    "openai": "^4.95.0",
     "otp-input-react": "^0.3.0",
     "raphael": "^2.3.0",
     "react": "^17.0.2",
