--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -8,46 +8,40 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code with full history
+      - name: Checkout PR branch and master
         uses: actions/checkout@v3
         with:
-         fetch-depth: 0  # Fetch all history
-         ref: ${{ github.head_ref }}
+          fetch-depth: 0
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
-
-      - name: Run ESLint
-        run: npm run lint || true
-
-      - name: Analyze Code with ChatGPT
+      - name: Get diff against master
         run: |
-          echo "## 🧠 ChatGPT Review Summary" > pr_review.md
-          echo "\`\`\`" >> pr_review.md
-
           git fetch origin master
-          git diff origin/master...HEAD -- . "src/**/*.js" "src/**/*.jsx" "src/**/*.ts" "src/**/*.tsx" > diff.txt
+          git diff origin/master...HEAD > diff.txt
 
-          DIFF_CONTENT=$(cat diff.txt | head -c 12000 | jq -Rs .)
-
-          RESPONSE=$(curl -s https://api.openai.com/v1/chat/completions \
-            -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "model": "gpt-4",
-              "messages": [
+      - name: Prepare prompt
+        run: |
+          DIFF=$(cat diff.txt | head -c 12000 | jq -Rs .)
+          PROMPT=$(jq -n \
+            --arg diff "$DIFF" \
+            '{
+              model: "gpt-4",
+              messages: [
                 {"role": "system", "content": "You are a senior React developer reviewing a pull request."},
-                {"role": "user", "content": "Here is the code diff:\n'"$DIFF_CONTENT"'\nPlease review and give suggestions."}
+                {"role": "user", "content": "Here is the code diff:\n\($diff)\nPlease review and give suggestions."}
               ]
             }')
+          echo "$PROMPT" > payload.json
 
-          echo "$RESPONSE" | jq -r '.choices[0].message.content' >> pr_review.md || echo "❌ ChatGPT response failed." >> pr_review.md
-          echo "\`\`\`" >> pr_review.md
+      - name: Call ChatGPT
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          RESPONSE=$(curl -s https://api.openai.com/v1/chat/completions \
+            -H "Authorization: Bearer $OPENAI_API_KEY" \
+            -H "Content-Type: application/json" \
+            -d @payload.json)
+
+          echo "$RESPONSE" | jq -r '.choices[0].message.content' > pr_review.md
 
       - name: Comment on PR
         uses: peter-evans/create-or-update-comment@v4
